k8s/overlays/gke/namespace-labels-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: colorflow
  labels:
    app.kubernetes.io/environment: gke
