k8s/overlays/gke/mlflow-artifact-root-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: colorflow
spec:
  template:
    spec:
      containers:
        - name: mlflow
