k8s/overlays/gke/mlflow-gcsfuse-annotation-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: colorflow
spec:
  template:
    metadata:
      annotations:
        gke-gcsfuse/volumes: "true"
