k8s/overlays/gke/mlflow-no-artifacts-volume-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: colorflow
spec:
  template:
    spec:
      containers:
        - name: mlflow
          volumeMounts:
            - $patch: delete
              name: mlflow-artifacts
      volumes:
        - $patch: delete
          name: mlflow-artifacts
