k8s/overlays/gke/mlserver-no-artifacts-volume-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlserver
  namespace: colorflow
spec:
  template:
    spec:
      containers:
        - name: mlserver
          volumeMounts:
            - $patch: delete
              name: mlflow-artifacts
      volumes:
        - $patch: delete
          name: mlflow-artifacts
